--- a/Salvager_Project/Assembly-CSharp.csproj
+++ b/Salvager_Project/Assembly-CSharp.csproj
@@ -9,7 +9,7 @@
     <ProductVersion>10.0.20506</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <RootNamespace></RootNamespace>
-    <ProjectGuid>{FE11F88E-824F-D024-8C05-F0032F604D5F}</ProjectGuid>
+    <ProjectGuid>{859FD842-7C69-10D1-8A5F-76BF838AFE6D}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <AssemblyName>Assembly-CSharp</AssemblyName>
@@ -56,6 +56,7 @@
     <Analyzer Include="C:\Program Files\Microsoft Visual Studio\2022\Community\Common7\IDE\Extensions\Microsoft\Visual Studio Tools for Unity\Analyzers\Microsoft.Unity.Analyzers.dll" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\UI\PlayButton.cs" />
     <Compile Include="Assets\Enemies\Scripts\Enemy.cs" />
     <Compile Include="Assets\Enemies\Scripts\EnemySpawner.cs" />
     <Compile Include="Assets\Enemies\Scripts\EnemiesContainer.cs" />
@@ -63,6 +64,7 @@
     <Compile Include="Assets\Scripts\General\BulletPool.cs" />
     <Compile Include="Assets\Scripts\General\Bullet.cs" />
     <Compile Include="Assets\Enemies\Scripts\EnemyStraight.cs" />
+    <Compile Include="Assets\Scripts\UI\ScoreText.cs" />
     <Compile Include="Assets\Scripts\GameManager.cs" />
     <Compile Include="Assets\Scripts\UI\PlayerLifebar.cs" />
     <Compile Include="Assets\Enemies\Scripts\EnemySinusoidal.cs" />
@@ -72,8 +74,7 @@
     <Compile Include="Assets\Player\Scripts\PlayerShipSelector.cs" />
     <Compile Include="Assets\Scripts\Rendering\BlitRenderFeature.cs" />
     <Compile Include="Assets\Scripts\General\K.cs" />
-    <Compile Include="Assets\Scripts\UI\PlayButton.cs" />
-    <Compile Include="Assets\Scripts\UI\ScoreText.cs" />
+    <Compile Include="Assets\Scripts\UI\UIManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
@@ -354,6 +355,12 @@
     </Reference>
     <Reference Include="Newtonsoft.Json">
       <HintPath>Library\PackageCache\com.unity.nuget.newtonsoft-json@3.0.2\Runtime\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEditor.iOS.Extensions.Xcode">
+      <HintPath>C:\Program Files\Unity\Hub\Editor\2021.3.10f1\Editor\Data\PlaybackEngines\iOSSupport\UnityEditor.iOS.Extensions.Xcode.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEditor.iOS.Extensions.Common">
+      <HintPath>C:\Program Files\Unity\Hub\Editor\2021.3.10f1\Editor\Data\PlaybackEngines\iOSSupport\UnityEditor.iOS.Extensions.Common.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Android.Types">
       <HintPath>C:\Program Files\Unity\Hub\Editor\2021.3.10f1\Editor\Data\PlaybackEngines\AndroidPlayer\Unity.Android.Types.dll</HintPath>
