--- a/Salvager_Project/Assembly-CSharp.csproj
+++ b/Salvager_Project/Assembly-CSharp.csproj
@@ -56,50 +56,50 @@
     <Analyzer Include="C:\Program Files\Microsoft Visual Studio\2022\Community\Common7\IDE\Extensions\Microsoft\Visual Studio Tools for Unity\Analyzers\Microsoft.Unity.Analyzers.dll" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Scripts\UI\PlayButton.cs" />
+    <Compile Include="Assets\UI\Scripts\PlayButton.cs" />
     <Compile Include="Assets\Enemies\Scripts\Enemy.cs" />
     <Compile Include="Assets\Enemies\Scripts\EnemySpawner.cs" />
     <Compile Include="Assets\Enemies\Scripts\EnemiesContainer.cs" />
+    <Compile Include="Assets\Enemies\Scripts\EnemyHoming.cs" />
     <Compile Include="Assets\Player\Scripts\PlayerMovement.cs" />
-    <Compile Include="Assets\Scripts\General\BulletPool.cs" />
-    <Compile Include="Assets\Scripts\General\Bullet.cs" />
+    <Compile Include="Assets\General\Scripts\General\BulletPool.cs" />
+    <Compile Include="Assets\General\Scripts\General\Bullet.cs" />
     <Compile Include="Assets\Enemies\Scripts\EnemyStraight.cs" />
-    <Compile Include="Assets\Scripts\UI\ScoreText.cs" />
-    <Compile Include="Assets\Scripts\GameManager.cs" />
-    <Compile Include="Assets\Scripts\UI\PlayerLifebar.cs" />
+    <Compile Include="Assets\UI\Scripts\ScoreText.cs" />
+    <Compile Include="Assets\General\Scripts\GameManager.cs" />
+    <Compile Include="Assets\UI\Scripts\PlayerLifebar.cs" />
     <Compile Include="Assets\Enemies\Scripts\EnemySinusoidal.cs" />
     <Compile Include="Assets\Player\Scripts\PlayerStats.cs" />
-    <Compile Include="Assets\Scripts\GameState.cs" />
-    <Compile Include="Assets\Scripts\General\Shooting.cs" />
+    <Compile Include="Assets\General\Scripts\GameState.cs" />
+    <Compile Include="Assets\General\Scripts\General\Shooting.cs" />
     <Compile Include="Assets\Player\Scripts\PlayerShipSelector.cs" />
-    <Compile Include="Assets\Scripts\UI\UIManager.cs" />
-    <Compile Include="Assets\Scripts\Rendering\BlitRenderFeature.cs" />
-    <Compile Include="Assets\Scripts\General\K.cs" />
-    <Compile Include="Assets\Enemies\Scripts\EnemyHoming.cs" />
+    <Compile Include="Assets\UI\Scripts\UIManager.cs" />
+    <Compile Include="Assets\General\Scripts\Rendering\BlitRenderFeature.cs" />
+    <Compile Include="Assets\General\Scripts\General\K.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
-    <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile Overlay.shader" />
-    <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap.shader" />
-    <None Include="Assets\TextMesh Pro\Shaders\TMPro_Mobile.cginc" />
-    <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF SSD.shader" />
-    <None Include="Assets\Shaders\GetLight.hlsl" />
-    <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Surface-Mobile.shader" />
-    <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Surface.shader" />
-    <None Include="Assets\TextMesh Pro\Sprites\EmojiOne Attribution.txt" />
-    <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap-Custom-Atlas.shader" />
-    <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF.shader" />
-    <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile SSD.shader" />
-    <None Include="Assets\TextMesh Pro\Resources\LineBreaking Leading Characters.txt" />
-    <None Include="Assets\TextMesh Pro\Shaders\TMPro_Properties.cginc" />
-    <None Include="Assets\TextMesh Pro\Shaders\TMPro_Surface.cginc" />
-    <None Include="Assets\TextMesh Pro\Resources\LineBreaking Following Characters.txt" />
-    <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile Masking.shader" />
-    <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF Overlay.shader" />
-    <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap-Mobile.shader" />
-    <None Include="Assets\TextMesh Pro\Fonts\LiberationSans - OFL.txt" />
-    <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile.shader" />
-    <None Include="Assets\TextMesh Pro\Shaders\TMP_Sprite.shader" />
+    <None Include="Assets\General\TextMesh Pro\Shaders\TMPro.cginc" />
+    <None Include="Assets\General\TextMesh Pro\Shaders\TMP_SDF-Mobile Overlay.shader" />
+    <None Include="Assets\General\TextMesh Pro\Shaders\TMP_Bitmap.shader" />
+    <None Include="Assets\General\TextMesh Pro\Shaders\TMPro_Mobile.cginc" />
+    <None Include="Assets\General\TextMesh Pro\Shaders\TMP_SDF SSD.shader" />
+    <None Include="Assets\General\Shaders\GetLight.hlsl" />
+    <None Include="Assets\General\TextMesh Pro\Shaders\TMP_SDF-Surface-Mobile.shader" />
+    <None Include="Assets\General\TextMesh Pro\Shaders\TMP_SDF-Surface.shader" />
+    <None Include="Assets\General\TextMesh Pro\Sprites\EmojiOne Attribution.txt" />
+    <None Include="Assets\General\TextMesh Pro\Shaders\TMP_Bitmap-Custom-Atlas.shader" />
+    <None Include="Assets\General\TextMesh Pro\Shaders\TMP_SDF.shader" />
+    <None Include="Assets\General\TextMesh Pro\Shaders\TMP_SDF-Mobile SSD.shader" />
+    <None Include="Assets\General\TextMesh Pro\Resources\LineBreaking Leading Characters.txt" />
+    <None Include="Assets\General\TextMesh Pro\Shaders\TMPro_Properties.cginc" />
+    <None Include="Assets\General\TextMesh Pro\Shaders\TMPro_Surface.cginc" />
+    <None Include="Assets\General\TextMesh Pro\Resources\LineBreaking Following Characters.txt" />
+    <None Include="Assets\General\TextMesh Pro\Shaders\TMP_SDF-Mobile Masking.shader" />
+    <None Include="Assets\General\TextMesh Pro\Shaders\TMP_SDF Overlay.shader" />
+    <None Include="Assets\General\TextMesh Pro\Shaders\TMP_Bitmap-Mobile.shader" />
+    <None Include="Assets\General\TextMesh Pro\Fonts\LiberationSans - OFL.txt" />
+    <None Include="Assets\General\TextMesh Pro\Shaders\TMP_SDF-Mobile.shader" />
+    <None Include="Assets\General\TextMesh Pro\Shaders\TMP_Sprite.shader" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
