--- a/Salvager_Project/Assembly-CSharp.csproj
+++ b/Salvager_Project/Assembly-CSharp.csproj
@@ -77,6 +77,8 @@
     <Compile Include="Assets\UI\Scripts\UIManager.cs" />
     <Compile Include="Assets\General\Scripts\Rendering\BlitRenderFeature.cs" />
     <Compile Include="Assets\General\Scripts\General\K.cs" />
+    <Compile Include="Assets\Enemies\Scripts\EnemyShooter.cs" />
+    <Compile Include="Assets\General\Scripts\Rendering\PostprocessHandler.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\General\TextMesh Pro\Shaders\TMPro.cginc" />
@@ -357,6 +359,12 @@
     </Reference>
     <Reference Include="Newtonsoft.Json">
       <HintPath>Library\PackageCache\com.unity.nuget.newtonsoft-json@3.0.2\Runtime\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEditor.iOS.Extensions.Xcode">
+      <HintPath>C:\Program Files\Unity\Hub\Editor\2021.3.10f1\Editor\Data\PlaybackEngines\iOSSupport\UnityEditor.iOS.Extensions.Xcode.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEditor.iOS.Extensions.Common">
+      <HintPath>C:\Program Files\Unity\Hub\Editor\2021.3.10f1\Editor\Data\PlaybackEngines\iOSSupport\UnityEditor.iOS.Extensions.Common.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Android.Types">
       <HintPath>C:\Program Files\Unity\Hub\Editor\2021.3.10f1\Editor\Data\PlaybackEngines\AndroidPlayer\Unity.Android.Types.dll</HintPath>
